@@ -1,3 +1,12 @@
+2005-12-19  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	- Patch by Patrick GOLDBRONN pgoldbronn on free.fr
+          Support out of dir compilation
+	
+	* Makefile.am:
+	* autogen.sh:
+	* gnome2-macros/autogen.sh:
+
 2005-12-18  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	Added file headers assigning correct copyright to Frederic.
